remove yarn mapping